--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body{ 
-  background: url("file:///C:/Users/Teodor/Desktop/Aron%20webside/Start%20up%20!!!/5.1%20header.jpg") no-repeat center center fixed; 
+  background: url(header.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
